--- a/home/templates/home/news.html
+++ b/home/templates/home/news.html
@@ -11,11 +11,9 @@
 {% endblock %}
 
 {% block content %}
-<div class="container h-100">
-    <div class="row h-100">
-        <div class="col-7 col-6-md my-auto">
-            <h1>News Page working</h1>
-        </div>
+<div class="container">
+    <div class="row">
+        <h1 class="col ">News</h1>
     </div>
 </div>
 {% endblock %}
