--- a/home/templates/home/about_us.html
+++ b/home/templates/home/about_us.html
@@ -13,7 +13,7 @@
 {% block content %}
 <div class="container">
     <div class="row">
-        <h1 class="col text-center">About Us</h1>
+        <h1 class="col">About Us</h1>
     </div>
     <div class="">    
         <img src="/media/buses/17.jpg" class="aboutimg img-fluid"></img>
