--- a/home/templates/home/sales.html
+++ b/home/templates/home/sales.html
@@ -11,11 +11,10 @@
 {% endblock %}
 
 {% block content %}
-<div class="container h-100">
-    <div class="row h-100">
-        <div class="col-7 col-6-md my-auto">
-            <h1>Sales Page working</h1>
-        </div>
+
+<div class="container">
+    <div class="row">
+        <h1 class="col">Sales</h1>
     </div>
 </div>
 {% endblock %}
