--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -30,7 +30,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-center text-light" href="{% url 'sales' %}"
+            <a class="logo-font font-weight-bold nav-link text-center text-light" href="{% url 'products' %}"
                 id="sales-link">
                 Sales
             </a>
