--- a/templates/base.html
+++ b/templates/base.html
@@ -113,7 +113,7 @@
                         </div>
                     </li>
                     <li class="list-inline-item align-middle">
-                        <a href=""
+                        <a href="{% url 'view_bag' %}"
                             class="{% if grand_total %}text-info font-weight-bold{% else %} text-black{% endif %} nav-link">
                             <div class="text-center">
                                 <div><i class="fas fa-shopping-bag fa-lg"></i></div>
