Sales Page updated with images and headers

--- a/home/templates/home/about_us.html
+++ b/home/templates/home/about_us.html
@@ -13,8 +13,9 @@
 {% block content %}
 <div class="container">
     <div class="row">
-        <h1 class="col">About Us</h1>
+        <h1 class="col mt-3">About Us</h1>
     </div>
+    <hr>
     <div class="">    
         <img src="/media/buses/17.jpg" class="aboutimg img-fluid"></img>
         <p><br>
