--- a/home/templates/home/links.html
+++ b/home/templates/home/links.html
@@ -15,7 +15,8 @@
         <div class="row h-100">
                 <div class="col col-6-md my-auto">
                         <!--  -->
-                        <h1 class="">Links</h1>
+                        <h1 class="col mt-3">Links</h1>
+                        <hr>
                         <div>
                                 <h2>Please get in touch. We would only be too happy to hear from you</h2>
                                 <p>Links below take you to external websites and are provided solely for reference.</p>
