--- a/home/templates/home/news.html
+++ b/home/templates/home/news.html
@@ -13,7 +13,8 @@
 {% block content %}
 <div class="container">
     <div class="row">
-        <h1 class="col ">News</h1>
+        <h1 class="col mt-3">News</h1>
     </div>
+    <hr>
 </div>
 {% endblock %}
