--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -34,7 +34,7 @@
                         {% endif %}
                         <a href="{% url 'product_detail' product.id %}">
                             <div class="card-body pb-0 pt-0 text-center">
-                                <p class="text-dark mb-0">{{ product.name }}</p>
+                                <p class="text-dark">{{ product.name }}</p>
                             </div>
                             <div class="card-footer text-bg-danger pt-0 border-0 text-center">
                                 <div class="row ">
