--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -5,10 +5,10 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
-                <div class="image-container my-5">
+                <div class="image-container my-5 text-center">
                     {% if product.image %}
                         <a href="{{ product.image.url }}" target="_blank">
-                            <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                            <img id="prodDetImg" class="card-img-top img-fluid " src="{{ product.image.url }}" alt="{{ product.name }}">
                         </a>
                         {% else %}
                         <!-- <a href="">
@@ -24,7 +24,7 @@
                     {% if product.category %}
                     <p class="small mt-1 mb-0">
                         <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
-                            <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
+                            <i class="fas fa-tag mr-1"></i> {{ product.category.friendly_name }}
                         </a>
                     </p>
                     {% endif %}
