Added bag functionality

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -345,3 +345,16 @@ a {
   max-height: 330px;
   width: auto;
 }
+
+.btn-outline-black {
+  background: white;
+  color: black !important;
+  border: 1px solid black;
+}
+
+.btn-outline-black:hover,
+.btn-outline-black:active,
+.btn-outline-black:focus {
+  background: black;
+  color: white !important;
+}
