--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -86,4 +86,6 @@
 {% endblock %}
 
 {% block postloadjs %}
+{{ block.super }}
+{% include 'products/includes/quantity_input_script.html' %}
 {% endblock %}
