--- a/static/css/base.css
+++ b/static/css/base.css
@@ -35,6 +35,7 @@ html {
 .btn-black:focus {
     background: white;
     color: red;
+    border: 1px solid #000;
 }
 
 
@@ -327,7 +328,8 @@ a {
   align-content: center;
 }
 
-#imgSales {
+#imgSales,
+.img-fluid.bagImg {
   height: 200px;
   width: auto;
   margin-left: auto;
@@ -357,4 +359,13 @@ a {
 .btn-outline-black:focus {
   background: black;
   color: white !important;
+}
+
+.btn-black {
+  background: black;
+  color: white;
+}
+
+#quantWidth {
+  max-width: 220px !important;
 }
