Toasts included and fixed

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -73,7 +73,7 @@
                                     </span>
                                     <span class="text-uppercase">Keep Shopping</span>
                                 </a>
-                                <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                                <input type="submit" id="liveToastBtn" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
                             </div>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                             
@@ -83,9 +83,12 @@
             </div>
         </div>
     </div>
+    
+    
 {% endblock %}
 
 {% block postloadjs %}
+
 {{ block.super }}
 {% include 'products/includes/quantity_input_script.html' %}
 {% endblock %}
