--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -36,6 +36,9 @@
                             <div class="card-body pb-0 pt-0 text-center">
                                 <p class="text-dark">{{ product.name }}</p>
                             </div>
+                            {% for message in messages %}
+                            {{message}}
+                            {% endfor %}
                             <div class="card-footer text-bg-danger pt-0 border-0 text-center">
                                 <div class="row ">
                                     <div class="col">
