--- a/static/css/base.css
+++ b/static/css/base.css
@@ -369,3 +369,18 @@ a {
 #quantWidth {
   max-width: 220px !important;
 }
+
+.message-container {
+  position: fixed;
+  top: 70px;
+  right: 16px;
+  z-index: 9999;
+}
+
+.custom_toast {
+  overflow: visible;
+}
+
+.toast-capper {
+  height: 2px;
+}
