--- a/templates/base.html
+++ b/templates/base.html
@@ -32,8 +32,10 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" defer>
     </script>
+    <script src="{% static 'js/toastr.min.js' %}"></script>
+
     {% endblock %}
     <!-- Google Fonts -->
     <!-- <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet"> -->
@@ -56,8 +58,8 @@
     {% block extra_js %}
     {% endblock %}
 
-    <link href="favicon.ico" type="image/x-icon" rel="icon" />
-    <link href="favicon.ico" type="image/x-icon" rel="shortcut icon" />
+    <!-- <link href="favicon.ico" type="image/x-icon" rel="icon" />
+    <link href="favicon.ico" type="image/x-icon" rel="shortcut icon" /> -->
     <title>London Omnibus Traction Society {% block extra_title %}{% endblock %}</title>
 
 </head>
@@ -151,7 +153,21 @@
     </header>
 
     {% if messages %}
-    <div class="message-container"></div>
+    <div class="message-container">
+        {% for message in messages %}
+            {% with message.level as level %}
+                {% if level == 40 %}
+                    {% include 'includes/toasts/toast_error.html' %}
+                {% elif level == 30 %}
+                    {% include 'includes/toasts/toast_warning.html' %}
+                {% elif level == 25 %}
+                    {% include 'includes/toasts/toast_success.html' %}
+                {% else %}
+                    {% include 'includes/toasts/toast_info.html' %}
+                {% endif %}
+            {% endwith %}
+        {% endfor %}
+    </div>
     {% endif %}
 
     {% block page_header %}
@@ -161,6 +177,14 @@
     {% endblock %}
 
     {% block postloadjs %}
+    <script>
+        document.addEventListener("DOMContentLoaded", function(event){
+            console.log(document.getElementById('liveToast'))
+            if (document.getElementById('liveToast')) {
+                document.getElementById("liveToast").style.display = "inherit";
+            }
+        });
+    </script>
     {% endblock %}
     <footer>
         <nav class="text-light text-center">
