Added final bits to toast

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -384,3 +384,26 @@ a {
 .toast-capper {
   height: 2px;
 }
+
+
+.bag-notification-wrapper {
+  height: 150px;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+
+.message-container {
+  position: fixed;
+  top: 72px;
+  right: 15px;
+  z-index: 99999999999;
+}
+
+.custom-toast {
+  overflow: visible;
+}
+
+.toast-capper {
+  height: 2px;
+}
