--- a/templates/base.html
+++ b/templates/base.html
@@ -24,8 +24,8 @@
     {% endblock %}
 
     {% block corejs %}
-    <!-- <script src="https://kit.fontawesome.com/9f41e2550b.js" crossorigin="anonymous"></script> -->
-    <script src="https://kit.fontawesome.com/4863a75fd6.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/" crossorigin="anonymous"></script> -->
+    <script src="https://kit.fontawesome.com/9f41e2550b.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
     </script>
@@ -34,7 +34,6 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" defer>
     </script>
-    <script src="{% static 'js/toastr.min.js' %}"></script>
 
     {% endblock %}
     <!-- Google Fonts -->
@@ -157,13 +156,13 @@
         {% for message in messages %}
             {% with message.level as level %}
                 {% if level == 40 %}
-                    {% include 'includes/toasts/toast_error.html' %}
+                {% include 'includes/toasts/toast_error.html' %}
                 {% elif level == 30 %}
-                    {% include 'includes/toasts/toast_warning.html' %}
+                {% include 'includes/toasts/toast_warning.html' %}
                 {% elif level == 25 %}
-                    {% include 'includes/toasts/toast_success.html' %}
+                {% include 'includes/toasts/toast_success.html' %}
                 {% else %}
-                    {% include 'includes/toasts/toast_info.html' %}
+                {% include 'includes/toasts/toast_info.html' %}
                 {% endif %}
             {% endwith %}
         {% endfor %}
@@ -182,8 +181,15 @@
             console.log(document.getElementById('liveToast'))
             if (document.getElementById('liveToast')) {
                 document.getElementById("liveToast").style.display = "inherit";
+                // setTimeout({document.getElementById("liveToast").style.display = "initial"}, 500)   
+            
+            setTimeout(closetoast, 2000);
+            function closetoast(){
+                var closeJava = document.getElementById('closeJava')
+                var addToBag = document.getElementById('liveToastBtn')
+                closeJava.classList.add('collapse')
             }
-        });
+        }});
     </script>
     {% endblock %}
     <footer>
@@ -200,9 +206,10 @@
             <a class="text-light" href="contact-us.html">Contact Us |</a>
             <a class="text-light" href="cookie-policy.html">Cookie Policy |</a>
             <a class="text-light" href="privacy-and-data-protection-policy.html">Privacy Policy</a>
+            <i class="fa-solid fa-triangle-exclamation"> </i>
         </nav>
         <div>
-            <p class="text-light">
+            <p class="text-light text-center">
                 Copyright © London Omnibus Traction Society 2023
             </p>
         </div>
