--- a/templates/includes/toasts/toast_error.html
+++ b/templates/includes/toasts/toast_error.html
@@ -1,9 +1,8 @@
-<div class="toast-container position-fixed top-0 end-0 p-3">
+<div id="closeJava" class="toast-container position-fixed top-0 end-0 p-3">
     <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
       <div class="toast-header bg-danger">
-        <img src="#" class="rounded me-2" alt="">
-        <strong class="me-auto">Error</strong>
-        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        <i class="fa-sharp fa-solid fa-bug"></i>
+        <strong class="me-auto"> &nbsp Error</strong>
       </div>
       <div class="toast-body">
         {{ message }}
