--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,13 +1,46 @@
-<div class="toast-container position-fixed top-0 end-0 p-3">
+<div id="closeJava" class="toast-container position-fixed top-0 end-0 p-3">
     <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
       <div class="toast-header bg-success">
-        <img src="#" class="rounded me-2" alt="">
-        <strong class="me-auto">Success</strong>
-        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        <i class="fa-sharp fa-solid fa-circle-check"></i>
+        <strong class="me-auto"> &nbsp Success</strong>
       </div>
       <div class="toast-body">
         {{ message }}
       </div>
+      {% if grand_total %}
+            <p class="logo-font bg-white text-black py-1">Your Bag ({{ product_count }})</p>
+            <div class="bag-notification-wrapper">
+                {% for item in bag_items %}
+                    <div class="row">
+                        <div class="col-3 my-1">
+                            {% if item.product.image %}
+                            <img class="w-100" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
+                            {% else %}
+                            <img class="w-100" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}">
+                            {% endif %}
+                        </div>
+                        <div class="col-9">
+                            <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+                            <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+            <div class="row">
+              <div class="col">
+                <strong><p class="mt-3 mb-1 text-black">
+                  Total: &nbsp 
+                  <span class="float-right">£{{ total|floatformat:2 }}</span>
+              </p></strong>
+                  <a href="{% url 'view_bag' %}" class="btn btn-black btn-block rounded-0">
+                      <span class="text-uppercase">Go To Secure Checkout</span>
+                      <span class="icon">
+                          <i class="fas fa-lock"></i>
+                      </span>
+                  </a>
+              </div>
+          </div>
+      {% endif %}
     </div>
   </div>
       
