--- a/static/css/base.css
+++ b/static/css/base.css
@@ -392,18 +392,19 @@ a {
   overflow-y: auto;
 }
 
-
-.message-container {
-  position: fixed;
-  top: 72px;
-  right: 15px;
-  z-index: 99999999999;
-}
-
 .custom-toast {
   overflow: visible;
 }
 
 .toast-capper {
   height: 2px;
+}
+
+.toast {
+  padding: 8px;
+  background-color: #fff;
+}
+
+#secureLink {
+  width: 100%;
 }
