--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,8 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" defer>
     </script>
-
+    <!-- Stripe -->
+    <script src="https://js.stripe.com/v3/"></script>
     {% endblock %}
     <!-- Google Fonts -->
     <!-- <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet"> -->
@@ -154,17 +155,17 @@
     {% if messages %}
     <div class="message-container">
         {% for message in messages %}
-            {% with message.level as level %}
-                {% if level == 40 %}
-                {% include 'includes/toasts/toast_error.html' %}
-                {% elif level == 30 %}
-                {% include 'includes/toasts/toast_warning.html' %}
-                {% elif level == 25 %}
-                {% include 'includes/toasts/toast_success.html' %}
-                {% else %}
-                {% include 'includes/toasts/toast_info.html' %}
-                {% endif %}
-            {% endwith %}
+        {% with message.level as level %}
+        {% if level == 40 %}
+        {% include 'includes/toasts/toast_error.html' %}
+        {% elif level == 30 %}
+        {% include 'includes/toasts/toast_warning.html' %}
+        {% elif level == 25 %}
+        {% include 'includes/toasts/toast_success.html' %}
+        {% else %}
+        {% include 'includes/toasts/toast_info.html' %}
+        {% endif %}
+        {% endwith %}
         {% endfor %}
     </div>
     {% endif %}
@@ -177,19 +178,21 @@
 
     {% block postloadjs %}
     <script>
-        document.addEventListener("DOMContentLoaded", function(event){
+        document.addEventListener("DOMContentLoaded", function (event) {
             console.log(document.getElementById('liveToast'))
             if (document.getElementById('liveToast')) {
                 document.getElementById("liveToast").style.display = "inherit";
                 // setTimeout({document.getElementById("liveToast").style.display = "initial"}, 500)   
-            
-            setTimeout(closetoast, 3000);
-            function closetoast(){
-                var closeJava = document.getElementById('closeJava')
-                var addToBag = document.getElementById('liveToastBtn')
-                closeJava.classList.add('collapse')
+
+                setTimeout(closetoast, 3000);
+
+                function closetoast() {
+                    var closeJava = document.getElementById('closeJava')
+                    var addToBag = document.getElementById('liveToastBtn')
+                    closeJava.classList.add('collapse')
+                }
             }
-        }});
+        });
     </script>
     {% endblock %}
     <footer>
